Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105002

-mno-direct-extern-access fails clang

    XMLWordPrintable

Details

    • 78ef9e9d14 (qt/qtbase/dev) 78ef9e9d14 (qt/tqtc-qtbase/dev) dd4875b54c (qt/qtbase/6.4) dd4875b54c (qt/tqtc-qtbase/6.4)

    Description

      Hi,

      I tried Qt 6.4-beta2 and the build of Qt works fine. But if I want to build my app it fails like this.

      clang-14: error: unknown argument: '-mno-direct-extern-access'
      

      I built Qt with GCC and tried to build my application with Clang. Normally it works.

      thiago Maybe it was introduced by this?
      https://code.qt.io/cgit/qt/qtbase.git/commit/?id=19b7f854a274812d9c95fc7aaf134a12530c105f

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            misery André Klitzing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes